--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -344,6 +344,25 @@
     "    plt.show()\n",
     "# ──────────────────────────────────────────────────────────────────────────\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5ebe6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'https://jupyter-server-pj7g99qqwxprf7xgj-8888.app.github.dev/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'https://jupyter-server-pj7g99qqwxprf7xgj-8888.app.github.dev/'. Verify the server is running and reachable. (Invalid response: 404 Not Found).)."
+     ]
+    }
+   ],
+   "source": [
+    "!python train_ppo.py --config config.json --data-files data/NVDA_5min.csv … "
+   ]
   }
  ],
  "metadata": {
