change start dates

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -5,14 +5,23 @@
    "execution_count": null,
    "id": "7dabae6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'https://jupyter-server-pj7g99qqwxprf7xgj-8888.app.github.dev/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'https://jupyter-server-pj7g99qqwxprf7xgj-8888.app.github.dev/'. Verify the server is running and reachable. (Invalid response: 404 Not Found).)."
+     ]
+    }
+   ],
    "source": [
     "# 👉 Select “Python 3 (ipykernel)” as your kernel before running!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c8a1ce2e",
    "metadata": {},
    "outputs": [
