change start date

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c8a1ce2e",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5a00cabf",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AI.code-workspace  config.json\tenv   notebooks\t\ttests\n",
-      "README.md\t   data_gen\teval  requirements.txt\ttrain\n"
+      "AI.code-workspace  config.json\tdata_gen  eval\t     requirements.txt  train\n",
+      "README.md\t   data\t\tenv\t  notebooks  tests\n"
      ]
     }
    ],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "zZOk0kZzIjM8",
    "metadata": {
     "colab": {
@@ -189,7 +189,7 @@
      "text": [
       "..\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.001s\n",
+      "Ran 2 tests in 0.051s\n",
       "\n",
       "OK\n"
      ]
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "qLkTJz4hdBVo",
    "metadata": {
     "colab": {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "tQU9aULm4sKd",
    "metadata": {
     "colab": {
@@ -352,25 +352,6 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "# ──────────────────────────────────────────────────────────────────────────\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5ebe6a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to connect to the remote Jupyter Server 'https://jupyter-server-pj7g99qqwxprf7xgj-8888.app.github.dev/'. Verify the server is running and reachable. (Failed to connect to the remote Jupyter Server 'https://jupyter-server-pj7g99qqwxprf7xgj-8888.app.github.dev/'. Verify the server is running and reachable. (Invalid response: 404 Not Found).)."
-     ]
-    }
-   ],
-   "source": [
-    "!python train_ppo.py --config config.json --data-files data/NVDA_5min.csv … "
    ]
   }
  ],
