change the root directory

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "c8a1ce2e",
    "metadata": {},
    "outputs": [
@@ -30,20 +30,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working in /workspaces/AI\n"
+      "✅ Working directory set to repo root: /\n"
      ]
     }
    ],
    "source": [
+    "# ───────────────────────────────────────────────────────────────────────────\n",
+    "# 📌 Notebook “repo-root” finder: change CWD to the project root\n",
+    "# ───────────────────────────────────────────────────────────────────────────\n",
     "import os\n",
-    "# Assumes this notebook lives at the project root\n",
-    "project_root = os.getcwd()\n",
-    "print(\"Working in\", project_root)\n"
+    "from pathlib import Path\n",
+    "\n",
+    "# Start from wherever the notebook was opened\n",
+    "p = Path().resolve()\n",
+    "\n",
+    "# Climb up until you find your marker file (here: config.json)\n",
+    "while not (p / \"config.json\").exists() and p.parent != p:\n",
+    "    p = p.parent\n",
+    "\n",
+    "# Switch into that directory\n",
+    "os.chdir(p)\n",
+    "print(f\"✅ Working directory set to repo root: {p}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "5a00cabf",
    "metadata": {},
    "outputs": [
@@ -51,8 +63,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'=2.0'\t\t     README.md\t   data       env    notebooks\t        tests\n",
-      " AI.code-workspace   config.json   data_gen   eval   requirements.txt   train\n"
+      "\u001b[34mApplications\u001b[m\u001b[m \u001b[34mdev\u001b[m\u001b[m          \u001b[34mLibrary\u001b[m\u001b[m      \u001b[34msbin\u001b[m\u001b[m         \u001b[34mUsers\u001b[m\u001b[m        \u001b[34mVolumes\u001b[m\u001b[m\n",
+      "\u001b[34mbin\u001b[m\u001b[m          \u001b[35metc\u001b[m\u001b[m          \u001b[34mopt\u001b[m\u001b[m          \u001b[34mSystem\u001b[m\u001b[m       \u001b[34musr\u001b[m\u001b[m\n",
+      "\u001b[34mcores\u001b[m\u001b[m        \u001b[35mhome\u001b[m\u001b[m         \u001b[34mprivate\u001b[m\u001b[m      \u001b[35mtmp\u001b[m\u001b[m          \u001b[35mvar\u001b[m\u001b[m\n"
      ]
     }
    ],
